--- a/web/appraisal/templates/appraisal/modals.html
+++ b/web/appraisal/templates/appraisal/modals.html
@@ -1,44 +1,42 @@
-<form class="cmxform" action="" method="post" id="form_create_apartment" action novalidate="novalidate">
-{% csrf_token %}
-
-<div class="modal fade" id="modalExport" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Exportar tasación</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-          Elija un formato:
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
-            <label class="form-check-label" for="exampleRadios1">
-              Excel (Santander)
-            </label>
-          </div>
-          <div class="form-check disabled">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
-            <label class="form-check-label" for="exampleRadios2">
-              Excel (BBVA)
-            </label>
-          </div>
-          <div class="form-check disabled">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3" value="option3" disabled>
-            <label class="form-check-label" for="exampleRadios3">
-              Otros
-            </label>
-          </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-        <button name="btn_export" class="btn btn-primary">Exportar</button>
+<form class="cmxform" action="" method="post" id="form_export" action novalidate="novalidate">
+  {% csrf_token %}
+  <div class="modal fade" id="modalExport" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Exportar tasación</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+            Elija un formato:
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+              <label class="form-check-label" for="exampleRadios1">
+                Excel (Santander)
+              </label>
+            </div>
+            <div class="form-check disabled">
+              <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
+              <label class="form-check-label" for="exampleRadios2">
+                Excel (BBVA)
+              </label>
+            </div>
+            <div class="form-check disabled">
+              <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3" value="option3" disabled>
+              <label class="form-check-label" for="exampleRadios3">
+                Otros
+              </label>
+            </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+          <button name="btn_export" class="btn btn-primary">Exportar</button>
+        </div>
       </div>
     </div>
   </div>
-</div>
-
 </form>
 
 
@@ -87,96 +85,98 @@
 </div>
 
 
-
-<div class="modal fade" id="asignarVisador" tabindex="-2" role="dialog" aria-labelledby="label" aria-hidden="true">
-  <div class="modal-dialog modal-lg" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Seleccione un visador</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <table class="table table-sm">
-          <thead class="thead-light">
-            <tr>
-              <th scope="col">Nombre</th>
-              <th scope="col">Tasaciones</th>
-            </tr>
-          </thead>
-          <tbody>
-            {% for user in visadores %}
-            <tr>
-              <th scope="col">
-                <div class="form-check">
-                  <input class="form-check-input" type="radio" name="visador" id="visador_radio" value="{{user.id}}" checked>
-                  <label class="form-check-label" for="visador_radio">
-                    {{user.first_name}} {{user.last_name}}
-                  </label>
-                </div>
-              </th>
-              <th scope="col">10</th>
-            </tr>
-            {% endfor %}
-          </tbody>
-        </table>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-        <button name="btn_assign_visador" class="btn btn-primary">Asignar</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-
-
-
-<div class="modal fade" id="asignarTasador" tabindex="-2" role="dialog" aria-labelledby="label" aria-hidden="true">
-  <div class="modal-dialog modal-lg" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Seleccione un tasador</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-
-        <table class="table table-sm">
-          <thead class="thead-light">
-            <tr>
-              <th scope="col">Nombre</th>
-              <th scope="col">Tasaciones</th>
-            </tr>
-          </thead>
-          <tbody>
-            {% for user in tasadores %}
-            <tr>
-              <th scope="col">
-                <div class="form-check">
-                  <input class="form-check-input" type="radio" name="tasador" id="tasador_radio" value="{{user.id}}" checked>
-                  <label class="form-check-label" for="tasador_radio">
-                    {{user.first_name}} {{user.last_name}}
-                  </label>
-                </div>
-              </th>
-              <th scope="col">10</th>
-            </tr>
-            {% endfor %}
-          </tbody>
-        </table>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-        <button name="btn_assign_tasador" class="btn btn-primary">Asignar</button>
+<form class="cmxform" action="" method="post" id="form_assign_visador" action novalidate="novalidate">
+  {% csrf_token %}
+  <div class="modal fade" id="asignarVisador" tabindex="-2" role="dialog" aria-labelledby="label" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Seleccione un visador</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <table class="table table-sm">
+            <thead class="thead-light">
+              <tr>
+                <th scope="col">Nombre</th>
+                <th scope="col">Tasaciones</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for user in visadores %}
+              <tr>
+                <th scope="col">
+                  <div class="form-check">
+                    <input class="form-check-input" type="radio" name="visador" id="visador_radio" value="{{user.id}}" checked>
+                    <label class="form-check-label" for="visador_radio">
+                      {{user.first_name}} {{user.last_name}}
+                    </label>
+                  </div>
+                </th>
+                <th scope="col">10</th>
+              </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+          <button name="btn_assign_visador" class="btn btn-primary">Asignar</button>
+        </div>
       </div>
     </div>
   </div>
-</div>
+</form>
 
+
+
+<form class="cmxform" action="" method="post" id="form_assign_tasador" action novalidate="novalidate">
+  {% csrf_token %}
+  <div class="modal fade" id="asignarTasador" tabindex="-2" role="dialog" aria-labelledby="label" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Seleccione un tasador</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+
+          <table class="table table-sm">
+            <thead class="thead-light">
+              <tr>
+                <th scope="col">Nombre</th>
+                <th scope="col">Tasaciones</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for user in tasadores %}
+              <tr>
+                <th scope="col">
+                  <div class="form-check">
+                    <input class="form-check-input" type="radio" name="tasador" id="tasador_radio" value="{{user.id}}" checked>
+                    <label class="form-check-label" for="tasador_radio">
+                      {{user.first_name}} {{user.last_name}}
+                    </label>
+                  </div>
+                </th>
+                <th scope="col">10</th>
+              </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+          <button name="btn_assign_tasador" class="btn btn-primary">Asignar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</form>
 
 
 <form class="cmxform" action="" method="post" id="form_create_apartment" action novalidate="novalidate">
