--- a/web/appraisal/templates/appraisal/realestate_property.html
+++ b/web/appraisal/templates/appraisal/realestate_property.html
@@ -359,10 +359,10 @@
               <div class="col-7">
                 <div class="form-group row align-middle">
                   <label class="col-sm-7 col-form-label-sm text-right">
-                    {{forms.realestate.permisoEdificacion.label_tag}}
+                    {{forms.realestate.permisoEdificacionNo.label_tag}}
                   </label>
                   <div class="col-lg-5">
-                    {{forms.realestate.permisoEdificacion}}
+                    {{forms.realestate.permisoEdificacionNo}}
                   </div>
                 </div>
               </div>
@@ -370,7 +370,7 @@
                 <div class="form-group row align-middle">
                   <div class="col-lg-10">
                     <div class="input-group date" id="datetimepicker1" data-target-input="nearest">
-                      {{forms.realestate.permisoEdificacionDate}}
+                      {{forms.realestate.permisoEdificacionFecha}}
                       <div class="input-group-append" data-target="#datetimepicker1" data-toggle="datetimepicker">
                         <div class="input-group-text"><i class="fa fa-calendar"></i></div>
                       </div>
@@ -393,10 +393,10 @@
               <div class="col-7">
                 <div class="form-group row align-middle">
                   <label class="col-sm-7 col-form-label-sm text-right">
-                    {{forms.realestate.recepcionFinal.label_tag}}
+                    {{forms.realestate.recepcionFinalNo.label_tag}}
                   </label>
                   <div class="col-lg-5">
-                    {{forms.realestate.recepcionFinal}}
+                    {{forms.realestate.recepcionFinalNo}}
                   </div>
                 </div>
               </div>
@@ -404,7 +404,7 @@
                 <div class="form-group row align-middle">
                   <div class="col-lg-10">
                     <div class="input-group date" id="datetimepicker2" data-target-input="nearest">
-                      {{forms.realestate.recepcionFinalDate}}
+                      {{forms.realestate.recepcionFinalFecha}}
                       <div class="input-group-append" data-target="#datetimepicker2" data-toggle="datetimepicker">
                         <div class="input-group-text"><i class="fa fa-calendar"></i></div>
                       </div>
