--- a/web/evaluation/templates/appraiser_list.html
+++ b/web/evaluation/templates/appraiser_list.html
@@ -14,7 +14,7 @@
         <div class="form-group">
                 <tr id="{{tasador.user.pk}}">
                     <td>
-                        <button type='submit' value="{{tasador.user.pk}}" class="tasaciones appraiser">
+                        <button type='submit' value="{{tasador.user.pk}}" class="btn appraiser">
                             {{ tasador.user.first_name }} {{ tasador.user.last_name }}</button>
                     </td>
 
