--- a/web/main/templates/main/header.html
+++ b/web/main/templates/main/header.html
@@ -22,7 +22,7 @@
       {% endif %}
       {% if perms.appraisal.add_appraisal %}
       <li class="nav-item">
-        <a class="nav-link" href="/evaluation/">Evaluar tasación</a>
+        <a class="nav-link" href="/evaluation/">Tasadores</a>
       </li>
       {% endif %}
     </ul>
