--- a/web/appraisal/templates/appraisal/realestate_surroundings.html
+++ b/web/appraisal/templates/appraisal/realestate_surroundings.html
@@ -8,17 +8,18 @@
     </div>
 
     <div class="form-group">
-      <label for="id_sectorDescription">
-        Descripcion del sector
-      </label>
-      <textarea class="form-control" id="id_sectorDescription" cols="80" rows="5"></textarea>
+      {{forms.appraisal.descripcionSector.label_tag}}
+      {{forms.appraisal.descripcionSector}}
     </div>
 
     <div class="form-group">
-      <label for="id_planoRegulador">
-        Plano regulador
-      </label>
-      <textarea class="form-control" id="id_planoRegulador" cols="80" rows="5"></textarea>
+      {{forms.appraisal.descripcionPlanoRegulador.label_tag}}
+      {{forms.appraisal.descripcionPlanoRegulador}}
+    </div>
+
+    <div class="form-group">
+      {{forms.appraisal.descripcionExpropiacion.label_tag}}
+      {{forms.appraisal.descripcionExpropiacion}}
     </div>
 
     <!--
