--- a/web/main/templates/main/modals.html
+++ b/web/main/templates/main/modals.html
@@ -147,52 +147,50 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
 
-             <td>
-                {{evaluationForm.onTime.label}}
-             </td>
-
-             <td>
-                {{evaluationForm.onTime}}
-             </td>
-            </tr>
-
-            <tr>
-              <td>
-                 {{evaluationForm.completeness.label}}
-              </td>
-              <td>
-                 {{evaluationForm.completeness}}
-              </td>
-            </tr>
-
-            <tr>
-              <td>
-                 {{evaluationForm.generalQuality.label}}
-              </td>
-              <td>
-                {{evaluationForm.generalQuality}}
-              </td>
-            </tr>
-            <tr>
-              <td>
-                 {{evaluationForm.commentText.label}}
-              </td>
-              <td>
-                {{evaluationForm.commentText}}
-              </td>
-            </tr>
-            <tr>
-              <td>
-                 {{evaluationForm.commentFeedback.label}}
-              </td>
-              <td>
-
-                {{evaluationForm.commentFeedback}}
-              </td>
-            </tr>
-
+              <tr>
+               <td>
+                  {{evaluationForm.onTime.label}}
+               </td>
+               <td id="onTime">
+                  {{evaluationForm.onTime}}
+               </td>
+                 <td>
+                 {{appraisal.appraisalevaluation.onTime}}
+               </td>
+              </tr>
+              <tr>
+                <td>
+                   {{evaluationForm.completeness.label}}
+                </td>
+                <td id="completeness">
+                   {{evaluationForm.completeness}}
+                </td>
+              </tr>
+              <tr>
+                <td>
+                   {{evaluationForm.generalQuality.label}}
+                </td>
+                <td id="generalQuality">
+                  {{evaluationForm.generalQuality}}
+                </td>
+              </tr>
+              <tr>
+                <td>
+                   {{evaluationForm.commentText.label}}
+                </td>
+                <td id="commentText">
+                  {{evaluationForm.commentText}}
+                </td>
+              </tr>
+              <tr>
+                <td>
+                   {{evaluationForm.commentFeedback.label}}
+                </td>
+                <td id="commentFeedback">
+                  {{evaluationForm.commentFeedback}}
+                </td>
+              </tr>
           </tbody>
         </table>
         <div class="modal-footer">
@@ -206,3 +204,7 @@
     </div>
   </div>
 </div>
+
+<script>
+
+</script>
