--- a/web/appraisal/templates/appraisal/realestate_general.html
+++ b/web/appraisal/templates/appraisal/realestate_general.html
@@ -175,34 +175,41 @@
 </div>
 
 <script>
-   $.formUtils.addValidator({
-      name : 'rut',
-      validatorFunction : function(rut, $el, config, language, $form) {
-         function dv(T){
-            var M=0,S=1;
-            for(;T;T=Math.floor(T/10))
-               S=(S+T%10*(9-M++%6))%11;
-            return S?S-1:'k';
-         };
-         if (rut.length == 0) return true // assuming field is not required
-         if (rut.length < 2) return false
-         rut = rut.split('.').join("");
-         rut = rut.split('-').join("");
-         var digv = rut.charAt(rut.length-1);
-         n = rut.substring(0,rut.length-1)
-         return (dv(n) == digv);
-         rut = parseInt(rut);
-         if (isNaN(rut)) {
-            return false
-         }
-         return true
-      },
-      errorMessage : 'Rut invalido',
-      errorMessageKey: 'badRut'
-   });
+  function valid_rut(rut) {
+    function dv(T) {
+      var M=0,S=1;
+      for (;T;T=Math.floor(T/10)) {
+        S=(S+T%10*(9-M++%6))%11;
+      }
+      return S?S-1:'k';
+    };
+    if (rut.length < 2) return false
+    rut = rut.split('.').join("");
+    rut = rut.split('-').join("");
+    var digv = rut.charAt(rut.length-1);
+    n = rut.substring(0,rut.length-1)
+    return (dv(n) == digv);
+    rut = parseInt(rut);
+    if (isNaN(rut)) {
+      return false
+    }
+    return true
+  }
+  
+  jQuery.validator.addMethod("rut",
+    function(value, element) {
+      return this.optional(element) || valid_rut(value);
+    },
+    "El rut no es válido"
+  );
 
-   $.validate({
-      //errorMessageClass: 'help-block form-error text-danger small',
-      lang: 'es'
-   });
+  $("#form").validate({
+    rules: {
+      "clienteRut": "rut",
+      "propietarioRut": "rut"
+    },
+    errorPlacement: function(error, element) {
+      error.insertAfter(element);
+    }
+  });
 </script>
