--- a/web/main/templates/main/appraisals.html
+++ b/web/main/templates/main/appraisals.html
@@ -178,7 +178,7 @@
         <td>
           <span style="vertical-align: middle;">
             {% if appraisal.visadorUser %}
-              {{ appraisal.visadorUser.first_name.0 }}. {{ appraisal.visadorUser.last_name }}
+              {{ appraisal.tasadorUser.first_name.0 }}. {{ appraisal.tasadorUser.last_name }}
             {% else %}
             -
             {% endif %}
